@@ -2,6 +2,8 @@
 Release 1.0.1
 =============
 
+* fix if no templates are found
+
 =============
 Release 1.0.0
 =============
